WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298834
[GStreamer] Fix various mediastream and pad probe buffer leaks reported by the GStreamer leak tracer
https://bugs.webkit.org/show_bug.cgi?id=298834
Summary
[GStreamer] Fix various mediastream and pad probe buffer leaks reported by th...
Philippe Normand
Reported
2025-09-14 04:49:08 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-09-14 05:26:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50718
EWS
Comment 2
2025-09-15 08:05:22 PDT
Committed
299959@main
(77738c8819ec): <
https://commits.webkit.org/299959@main
> Reviewed commits have been landed. Closing PR #50718 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-15 08:06:24 PDT
<
rdar://problem/160614825
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug