fixup! [GStreamer][MediaStream] Fix various leaks reported by the GStreamer leak tracer https://bugs.webkit.org/show_bug.cgi?id=298834